# shinami-python-sdk

./: README.md  pyproject.toml
shinami_python_sdk/: iaw.py  models.py  shinami.py
tests/: __init__.py
